--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>Work Style Profile Quiz</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Quiz App</h1>
+        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Logo%20transparent-FhMhho8ZZjU7Tb7OkKUzbDUJJ88bwd.png" alt="Culture Coach Logo" class="logo">
+        <h1>Work Style Profile Quiz</h1>
         <div id="quiz">
             <h2 id="question"></h2>
             <div id="choices"></div>
         </div>
         <div id="results" style="display: none;">
-            <h2>Quiz Results</h2>
+            <h2>Your Work Style Profile</h2>
             <canvas id="radarChart"></canvas>
             <button id="downloadPDF">Download PDF Report</button>
             <button id="restart">Restart Quiz</button>
