--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Logo%20transparent-FhMhho8ZZjU7Tb7OkKUzbDUJJ88bwd.png" alt="Culture Coach Logo" class="logo">
+        <img src="logo" alt="Culture Coach Logo" class="logo">
         <h1>Work Style Profile Quiz</h1>
         <div id="quiz">
             <h2 id="question"></h2>
