--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work Style Profile Quiz</title>
+    <title>Preferred Working Style Style Quiz</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <img src="logo" alt="Culture Coach Logo" class="logo">
-        <h1>Work Style Profile Quiz</h1>
-        <div id="quiz">
+        <img src="logo.png" alt="Culture Coach Logo" class="logo">
+        <h1>Work Style Quiz</h1>
+        <div id="start-page">
+            <div id="quiz-description" class="quiz-description">
+				This quiz exists to assess your preferred working style. This can be used for new and existing teams to understand how to best interact with each other. <br><br> None of your results are stored.
+            </div>
+            <button id="start-quiz">Start Quiz</button>
+        </div>
+        <div id="quiz" style="display: none;">
             <h2 id="question"></h2>
             <div id="choices"></div>
+            <div class="progress-container">
+                <div id="progress-bar"></div>
+            </div>
+            <div id="progress-text"></div>
         </div>
         <div id="results" style="display: none;">
-            <canvas id="radarChart"></canvas>
+            <h2>Your Work Style Profile</h2>
+            <canvas id="polarChart"></canvas>
             <button id="downloadPDF">Download PDF Report</button>
             <button id="restart">Restart Quiz</button>
         </div>
