--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="results" style="display: none;">
             <h2>Your Work Style Profile</h2>
             <canvas id="polarChart"></canvas>
-            <button id="downloadPDF">Download PDF Report</button>
+            <button id="downloadPDF">Download PDF Summary</button>
             <button id="restart">Restart Quiz</button>
         </div>
     </div>
