--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Work Style Quiz</h1>
         <div id="start-page">
             <div id="quiz-description" class="quiz-description">
-				This quiz exists to assess your preferred working style. This can be used for new and existing teams to understand how to best interact with each other. <br><br> None of your results are stored.
+		This quiz will help clarify your preferred working style. This can be used for new and existing teams, or manager-report relationships to understand how to best interact with each other. <br><br> None of your results are stored.
             </div>
             <button id="start-quiz">Start Quiz</button>
         </div>
