--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preferred Working Style Style Quiz</title>
+    <title>Preferred Working Style Quiz</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <h1>Work Style Quiz</h1>
         <div id="start-page">
             <div id="quiz-description" class="quiz-description">
-		This quiz will help clarify your preferred working style. This can be used for new and existing teams, or manager-report relationships to understand how to best interact with each other. <br><br> None of your results are stored.
+		This quiz helps to clarify your preferred working style. This can be used for new and existing teams, or manager-report relationships to understand how to best interact with each other. <br><br> None of your results are stored.
             </div>
             <button id="start-quiz">Start Quiz</button>
         </div>
